    if any have been provided;
  * Major improvement to correctly enumerate tables, columns and dump
    tables entries on Oracle and on PostgreSQL when the database name is
    not 'public' schema or a system database;
  * Minor improvement to be able to dump entries on MySQL < 5.0 when
    database name, table name and column(s) are provided;
  * Minor code restyling.

 -- Bernardo Damele A. G. <bernardo.damele@gmail.com>  Sat,  1 Nov 2008 10:00:00 +0100


sqlmap (0.6.1-1) stable; urgency=low

  * Major bug fix to blind SQL injection bisection algorithm to handle an
    exception;
  * Added a Metasploit Framework 3 auxiliary module to run sqlmap;
  * Implemented possibility to test for and inject also on LIKE
    statements;
  * Implemented --start and --stop options to set the first and the last
    table entry to dump;
  * Added non-interactive/batch-mode (--batch) option to make it easy to
    wrap sqlmap in Metasploit and any other tool;
  * Minor enhancement to save also the length of query output in the
    session file when retrieving the query output length for ETA or for
    resume purposes;
  * Changed the order sqlmap dump table entries from column by column to
    row by row. Now it also dumps entries as they are stored in the tables,
    not forcing the entries' order alphabetically anymore;
  * Minor bug fix to correctly handle parameters' value with % character.

 -- Bernardo Damele A. G. <bernardo.damele@gmail.com>  Fri, 20 Oct 2008 10:00:00 +0100


sqlmap (0.6-1) stable; urgency=low

  * Complete code refactor and many bugs fixed;
  * Added multithreading support to set the maximum number of concurrent
    HTTP requests;
  * Implemented SQL shell (--sql-shell) functionality and fixed SQL query
    (--sql-query, before called -e) to be able to run whatever SELECT
    statement and get its output in both inband and blind SQL injection
    attack;
  * Added an option (--privileges) to retrieve DBMS users privileges, it